<resources>
    <string name="app_name" translatable="false">Find Walk</string>
    <string name="title_choose_dialog">Choose a walk!</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="Ops">Oops!</string>
    <string name="gps_warning">You need to allow access to your location to use the app.\N Try again and click OK.</string>
    <string name="try_again">Try again</string>
    <string name="random_button">Random Button</string>
    <string name="categories_button">categories button</string>
    <string name="random_walk">Random</string>
    <string name="filter_category">Category</string>
    <string name="close_choose_walk">Close choose walk</string>
    <string name="distance" translatable="false">10 \n km</string>
    <string name="km" translatable="false">\nkm</string>
    <string name="start">START!</string>
    <string name="next">next</string>
    <string name="store">Store</string>
    <string name="cafe">Cafe</string>
    <string name="bar">Bar</string>
    <string name="supermarket">Supermarket</string>
    <string name="local_government_office">Local Government Office</string>
    <string name="park">Park</string>
    <string name="restaurant">Restaurant</string>
    <string name="drugstore">Drugstore</string>
    <string name="find_walk">Find Walk</string>
    <string name="fail">Connection fail</string>
</resources>